--- a/Learn.html
+++ b/Learn.html
@@ -55,7 +55,7 @@
     <div class="container bg-light">
         <section>
             <div class="row">
-                <div class="col-md-6 contact-section">
+                <div class="col-md-6 col-sm-6 contact-section">
                     <div id="carouselExampleIndicators" class="carousel">
                       <ol class="carousel-indicators">
                         <li data-target="#carouselExampleIndicators" class="active"></li>
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 contact-section">
+                <div class="col-md-6 col-sm-6 contact-section">
                     <div class="row">
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="flip-card-side">
